@@ -1249,7 +1249,11 @@ Once declared, keys may be added to the cache with the 'add-to-cache' action:
 
 	match all action add-to-cache "~/my-cache" key "%[message_id]"
 
-Or the existence of a key in the cache may be tested for using the 'in-cache'
+Or removed with the 'remove-from-cache' action:
+
+	match all action remove-from-cache "~/my-cache" key "%[message_id]"
+
+And the existence of a key in the cache may be tested for using the 'in-cache'
 condition:
 
 	match in-cache "~/my-cache" key "%[message_id]" action "foundincache"
@@ -1559,5 +1563,5 @@ Because I hate maintaining and testing two sets of code, there is a strong
 possibility that PCRE may become the fdm default as well at some point.
 
 ================================================================================
-$Id: MANUAL.in,v 1.62 2007-10-02 09:36:13 nicm Exp $
+$Id: MANUAL.in,v 1.63 2007-10-02 10:04:43 nicm Exp $
 
