@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.164 2007-10-02 09:36:13 nicm Exp $
+# $Id: Makefile,v 1.165 2007-10-02 10:04:43 nicm Exp $
 
 .SUFFIXES: .c .o .y .h
 .PHONY: clean lint regress yannotate manual \
@@ -22,7 +22,7 @@ SRCS= fdm.c \
       deliver-add-header.c deliver-drop.c deliver-keep.c deliver-maildir.c \
       deliver-mbox.c deliver-pipe.c deliver-remove-header.c deliver-rewrite.c \
       deliver-smtp.c deliver-stdout.c deliver-tag.c deliver-add-to-cache.c \
-      deliver-write.c \
+      deliver-remove-from-cache.c deliver-write.c \
       fetch-imap.c fetch-imappipe.c fetch-maildir.c fetch-nntp.c fetch-pop3.c \
       fetch-pop3pipe.c fetch-stdin.c fetch-mbox.c pop3-common.c imap-common.c \
       mail-state.c mail-time.c mail.c file.c \
