@@ -1,4 +1,4 @@
-.\" $Id: fdm.conf.5,v 1.91 2007-10-02 09:36:14 nicm Exp $
+.\" $Id: fdm.conf.5,v 1.92 2007-10-02 10:04:43 nicm Exp $
 .\"
 .\" Copyright (c) 2006 Nicholas Marriott <nicm@users.sourceforge.net>
 .\"
@@ -655,8 +655,9 @@ or
 Caches must be declared before they are used. Items are added to caches using
 the
 .Ic add-to-cache
-action
-and they are searched using the
+action, removed using the
+.Ic remove-from-cache
+action, and searched for using the
 .Ic in-cache
 condition; see below for information on these.
 .Sh ACTIONS
@@ -797,7 +798,16 @@ Write the mail to
 This action adds the string
 .Ar key
 to the cache specified by
-.Ar path .
+.Ar path . 
+If
+.Ar key
+already exists in the cache, it is replaced.
+.It Ic remove-from-cache Ar path Ic key Ar key
+Remove the string
+.Ar key
+from the cache
+.Ar path ,
+if a matching key is present.
 .It Ic action Ar name
 This invokes another named action.
 A maximum of five actions may be called in a sequence.
