@@ -1,7 +1,8 @@
 02 October 2007
 
+* "remove-from-cache" action.
 * Rename to-cache to add-to-cache (to-cache remains as a compatibility alias).
-  This is to match the planned delete-from-cache and perhaps other similar.
+  This is to match the planned remove-from-cache and perhaps other similar.
 * The account/all warnings are now gone.
 
 01 October 2007
@@ -704,4 +705,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.172 2007-10-02 09:36:13 nicm Exp $
+$Id: CHANGES,v 1.173 2007-10-02 10:04:43 nicm Exp $
